changed images to https

--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card">
-                <img src="http://musclememory.com/magCovers/sh/sh4905.jpg" class="card-img-top" alt="...">
+                <img src="https://musclememory.com/magCovers/sh/sh4905.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Mr Universe 1948</h5>
                 </div>
@@ -37,7 +37,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="http://musclememory.com/magCovers/sh/sh4112.jpg" class="card-img-top" alt="...">
+                <img src="https://musclememory.com/magCovers/sh/sh4112.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Strength Health 1941</h5>
                 </div>
@@ -69,7 +69,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                  <img src="http://musclememory.com/magCovers/sh/sh4604.jpg" class="card-img-top" alt="...">
+                  <img src="https://musclememory.com/magCovers/sh/sh4604.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Strength Health 1946</h5>
                   </div>
