--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
         <nav class='d-flex bg-light justify-content-center navbar nav-pills'>
             <ul class='nav'>
                 <li class='nav-item'>
-                    <a class='nav-link' href="./home.html">Home</a> </li>
+                    <a class='nav-link' href="./index.html">Home</a> </li>
                 <li class='nav-item'>
                     <a class='nav-link' href="./bio.html">Bio</a></li>
                 <li>
