--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <img class="d-block rounded mx-auto d-block mx-auto margin utility class" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/John_Grimek_-_Strength_and_Health_Sep_1945.jpg/330px-John_Grimek_-_Strength_and_Health_Sep_1945.jpg" alt="First slide">
                           </div>
                           <div class="carousel-item ">
-                            <img class="d-block rounded mx-auto d-block mx-auto margin utility class" src="http://1.bp.blogspot.com/_TywjtAkQazw/S4HUQmp33dI/AAAAAAAAAqE/mV1rrlp_-K8/s400/7.jpg" alt="Second slide">
+                            <img class="d-block rounded mx-auto d-block mx-auto margin utility class" src="https://1.bp.blogspot.com/_TywjtAkQazw/S4HUQmp33dI/AAAAAAAAAqE/mV1rrlp_-K8/s400/7.jpg" alt="Second slide">
                           </div>
                         </div>
                     </div>
